# profi

./: .gitignore  README.md  flake.nix  hm.nix  install.py  pyproject.toml  requirements.txt  script.sh
.github/: renovate.json
.github/workflows/: _install.yml  _lint.yml  _nix-flake-update.yml  _pytest.yml  auto-update-nix.yml  ci.yml  nix-flake-update.yml  pr.yml
pkgs/: mythic.nix
src/profi/: __init__.py  context.py  filters.py  loader.py  profi.py  renderer.py
src/profi/templates/: template.yaml
src/profi/templates/helper_scripts/: chunk-txt_record.py  createFakeCertificate.py  encode.py  icebreakerServicesToNoteMd.py  mythicConfigGenerator.py  mythicPayloadGenerator.py  namemash.py  nmapServicesToNote.py  nmapServicesToOrg.py  openapiEndpointsToNote.py  patch_elf_glibc_compat.py  postmanEndpointsToNote.py  shellcode_encrypter.py  shellcode_runner_generator.py  startEnhancedHttpServer.py  upload.php  vba_macro_obfuscator.py  wsdlEndpointsToNote.py
src/profi/templates/payloads/: amsi-bypass-windows-fieldoffset-2.yaml  amsi-bypass-windows-fieldoffset.yaml  amsi-bypass-windows-forceerror.yaml  amsi-bypass-windows-mattgref02.yaml  cmd_or_pwsh  cmd_or_pwsh.yaml  console-enum-js-endpoints.yaml  generate-deserialization-rce-ysoserial-net-binary.yaml  (+113 more)
tests/: test_authors_type.py  test_enhanced_http_server.py  test_filename_match_metadata.py  test_malformed_yaml.py  test_tag_in_config.py  test_tag_in_readme.py  test_tag_in_template.py  test_template_includes.py  test_template_outputs.py  test_template_rendering.py  test_template_structure.py  utils.py
(+353 files in other folders)
